2001-02-05  Steve Robbins  <steve@nyongwa.montreal.qc.ca>

	* README.release: New.  Recipe for creating a new release.

	* Prog_utils/random.c (set_random_seed, get_random): Removed
	sun-only prototypes; Gilles Beaudoin
	<gilles.beaudoin@attglobal.net> reports they are no longer valid
	for solaris 7.

2001-01-28  Steve Robbins  <steve@nyongwa.montreal.qc.ca>

	* NEWS: Updated.

	* Tagged as release-1_3_3.

	* configure.in: Put BIC libs into variable BIC_LIBS, rather than LIBS.
	Set VERSION to 1.3.3.

	* Makefile.am (libbicpl_la_LIBADD): Link $(BIC_LIBS) and $(imageio_LIBS).

	* Images/Makefile.am: Do not need $(imageio_LIBS).

2001-01-26  Steve ROBBINS  <stever@bic.mni.mcgill.ca>

	* Tagged as release-1_3_2.
	* configure.in: Set VERSION to 1.3.2

	* configure.in: Disable shared libraries by default.

2001-01-23  Steve Robbins  <steve@nyongwa.montreal.qc.ca>

	* Tagged as release-1_3_1.
	
	* configure.in: Set VERSION to 1.3.1.
	* Makefile.am (libbicpl_la_LDFLAGS): Bumped library REVISION number.

	* Makefile.include:
	* Makefile.objects: Removed.

	* INSTALL.bicpl: New.

	* configure.in: Detect whether netpbm or IRIS image library
	is installed, used to read or write image files in Images/rgb_io.c;
	we prefer netpbm over IRIS image.  This is is a change, but previous
	behaviour can be restored using "--without-ppm".

	* Images/Makefile.am: Changes for above.

	* Images/rgb_io_sgi.c: Code formerly in rgb_io.c.
	* Images/rgb_io_ppm.c: New.  Do image I/O using netpbm's PPM files.
	* Images/rgb_io_none.c: New.  Emit error if image I/O function called.
	* Images/rgb_io.c: New.  Dummy file that includes one of the above
	options.

2001-01-05  Steve Robbins  <steve@nyongwa.montreal.qc.ca>

	* configure.in: Add "--with-build-path" flag to set
	CPPFLAGS and LDFLAGS, rather than generating them
	from ${prefix}.
	

2000-12-15  Steve Robbins  <steve@nyongwa.montreal.qc.ca>

	* acinclude.m4: Update to latest version from smr_macros.

	* Images/rgb_io.c: Include config.h.
